backend/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-app
  namespace: bank-system
  labels:
    app: bank-app
spec:
  replicas: 2 # Можна збільшити для масштабування
  selector:
    matchLabels:
      app: bank-app
  template:
    metadata:
      labels:
        app: bank-app
    spec:
      containers:
      - name: bank-app
        image: andreychykviktor/bank-app:1.0.1 #Docker registry в цьому місті потрібно міняти при оновленні
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 9000
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
